tests/NormalTests/paczka1/fuzzy1/66218815.err
Error in line 1: ZdPMtZA7k A567 63,6
Error in line 2: 2Zx0ywjt S53 56,1
Error in line 24: Ls3qm0D7 S53 16,,
Error in line 25: kNUoMyx A567 38,2
